test_suite5/ALAN/test_suite/alan-2022-examples/passing/000050_deriv.alan
source ye begin get E[(49 <= 1308)] end
