test_suite5/ALAN/test_suite/alan-2022-examples/failing/004020_mutation.alan
source s begin leave(1 <=) end
